--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learning",
   "version": "0.0.1",
-  "description": "面经宝典",
+  "description": "重学前端",
   "homepage": "",
   "directories": {
     "doc": "src"
